--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,11 @@ bootJar {
 
 dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.32'
-    implementation 'org.apache.tomcat:tomcat-servlet-api:10.0.8'
+    //implementation 'org.apache.tomcat:tomcat-servlet-api:10.0.8'
     implementation 'org.opensaml:xmltooling:1.3.1'
+
+    implementation('org.apache.tomcat:tomcat-servlet-api:9.0.0.M26')
+
 
 
     implementation name: 'nidp'
