--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation name: 'nidp'
     implementation name: 'NAMCommon'
+    implementation name: 'jcce-1.1.2'
     implementation 'org.jetbrains:annotations:20.1.0'
 
     compileOnly 'org.apache.tomcat:catalina:6.0.16'
